fix spelling on tech blog articles

--- a/docs/Tech Blog/2013/2013-02-02-mongodb-v2-2-3-uwsgi-v1-4-5.md
+++ b/docs/Tech Blog/2013/2013-02-02-mongodb-v2-2-3-uwsgi-v1-4-5.md
@@ -19,7 +19,7 @@ The main benefit of this version is the performance improvements on replicaSets.
 
 ## uwsgi-1.4.5
 
-This one is quite a bump. I was particulary interested to know that the memory leak discovered on the gevent loop got fixed. Have a look at all the nice backports too, they're worth it.
+This one is quite a bump. I was particularly interested to know that the memory leak discovered on the gevent loop got fixed. Have a look at all the nice backports too, they're worth it.
 
 - added --python-version and --perl-version
 - **fixed a gevent memory leak**
