--- a/docs/Tech Blog/2013/2013-05-16-fujifilm-gf670w.md
+++ b/docs/Tech Blog/2013/2013-05-16-fujifilm-gf670w.md
@@ -15,7 +15,7 @@ For my soon to come birthday, I got myself my new toy in advance so I could use 
 
 Yes, this is a big camera and it comes with a very nice leather case and a lens hood. This is a telemetric camera with a comfortable visor, it accepts 120 and 220 films and is capable of shooting in standard 6x6 and 6x7 !
 
-In the medium format world, the 55mm lens is actually a wide angle one as it is comparable to a 28mm in the usual 24x36 world. Its performances are not crazy on paper with a 4.5 aperture and a shutter speed going from 4s to 1/500s (as fast as a 1956 Rolleiflex) but the quality is just stunning as it's sharp and offers a somewhat inexistant chromatic abberation.
+In the medium format world, the 55mm lens is actually a wide angle one as it is comparable to a 28mm in the usual 24x36 world. Its performances are not crazy on paper with a 4.5 aperture and a shutter speed going from 4s to 1/500s (as fast as a 1956 Rolleiflex) but the quality is just stunning as it's sharp and offers a somewhat inexistent chromatic aberration.
 
 Want proof ? These are some of my first roll's shoots uploaded at full resolution :
 
