--- a/docs/Tech Blog/2014/2014-01-12-py3status-v1-2.md
+++ b/docs/Tech Blog/2014/2014-01-12-py3status-v1-2.md
@@ -19,7 +19,7 @@ I'm glad to announce a new release of **py3status** with an exciting main new fe
 ## changelog
 
 - new module dpms.py allowing activation and deactivation of DPMS thx to **André Doser**
-- order i3status output updates to prevent it from overwritting any modification made on i3status json list by a user module, this avoids a possible user filter flapping on i3status modules
+- order i3status output updates to prevent it from overwriting any modification made on i3status json list by a user module, this avoids a possible user filter flapping on i3status modules
 - fix delay on first execution of each module which could be equal to py3status interval time before being executed : **your modules get executed and displayed immediately no matter py3status' interval**
 - the real i3status thread output json list is passed to all modules as the i3status_output_json parameter, **this allows any user module to change any of the i3status output by simply altering the given json on the list**, inspired thx to **@drestebon** on issue #23
 - add validation for the position parameter
