--- a/docs/Tech Blog/2015/2015-03-17-mongodb-3-0-1.md
+++ b/docs/Tech Blog/2015/2015-03-17-mongodb-3-0-1.md
@@ -21,7 +21,7 @@ I introduced quite some changes in this ebuild which I wanted to share with you 
 Major changes :
 
 - [respect upstream's optimization flags](https://bugs.gentoo.org/show_bug.cgi?id=536688) : unless in debug build, user's optimization flags will be ignored to [prevent crashes and weird behaviour](https://bugs.gentoo.org/show_bug.cgi?id=526114).
-- shared libraries for C/C++ are not built by the core mongo respository anymore, so I removed the static-libs USE flag.
+- shared libraries for C/C++ are not built by the core mongo repository anymore, so I removed the static-libs USE flag.
 - various dependencies optimization to trigger a rebuild of mongoDB when one of its linked dependency changes.
 
 ## app-admin/mongo-tools
