--- a/docs/Tech Blog/2020/2020-09-07-py3status-v3-29.md
+++ b/docs/Tech Blog/2020/2020-09-07-py3status-v3-29.md
@@ -36,7 +36,7 @@ Two new exciting modules are in!
 Then some interesting bug fixes and enhancements are to be noted
 
 - py3.requests: return empty json on remote server problem fix #1401
-- core modules: remove deprectated function, fix type annotation support (#1942)
+- core modules: remove deprecated function, fix type annotation support (#1942)
 
 Some modules also got improved
 
