--- a/docs/Tech Blog/2013/2013-02-16-postfix-2-10-0.md
+++ b/docs/Tech Blog/2013/2013-02-16-postfix-2-10-0.md
@@ -16,6 +16,6 @@ Earlier this week, Wietse Venema announced the latest stable release of **postfi
 
 - Separation of relay policy (with smtpd_relay_restrictions) from spam policy (with smtpd_{client, helo, sender, recipient}_restrictions), which makes accidental open relay configuration less likely. The default is backwards compatible.
 - **HAproxy** load-balancer support for postscreen(8) and smtpd(8). The **nginx** proxy was already supported by Postfix 2.9 smtpd(8), using XCLIENT commands.
-- Support for the TLSv1 and TLSv2 protocols, as well as support to turn them off if needed for inter-operability.
+- Support for the TLSv1 and TLSv2 protocols, as well as support to turn them off if needed for interoperability.
 - **Laptop-friendly** configuration. By default, Postfix now uses UNIX-domain sockets instead of FIFOs, and thus avoids MTIME file system updates on an idle mail system.
 - Revised **postconf**(1) command. The "-x" option expands $name in a parameter value (both main.cf and master.cf); the "-o name=value" option overrides a main.cf parameter setting; and postconf(1) now warns about a $name that has no name=value setting.
