--- a/docs/Tech Blog/2014/2014-05-23-rsyslog-v7-6-3.md
+++ b/docs/Tech Blog/2014/2014-05-23-rsyslog-v7-6-3.md
@@ -23,7 +23,7 @@ Please read carefully because this version introduces [major ebuild changes](htt
    Beginning with rsyslog-7.6, the "/var/log/syslog" log file will no
    longer being written per default. We are considering this file as
    deprecated/obsolet for the typical user/system.
-   The content from this log file is still availble through other
+   The content from this log file is still available through other
    (dedicated) log files, see
 
      - /var/log/cron.log
